@@ -211,7 +211,7 @@ class GLTERRAIN
   virtual bool IsFatalToStay() const { return true; }
  protected:
   virtual ushort GetClassAnimationFrames() const { return 32; }
-  virtual void VirtualConstructor(bool);
+  //virtual void VirtualConstructor(bool);
   virtual vector2d GetBitmapPos(ushort) const;
   virtual bool HasSpecialAnimation() const { return true; }
 );
