@@ -37,6 +37,7 @@ uchar rightleg::GetSpecialFlags() const { return SpecialFlags|ST_RIGHT_LEG; }
 uchar leftleg::GetBodyPartIndex() const { return LEFT_LEG_INDEX; }
 uchar leftleg::GetSpecialFlags() const { return SpecialFlags|ST_LEFT_LEG; }
 
+vector2d eddytorso::GetBitmapPos(ushort Frame) const { return vector2d(64 + ((Frame&6) << 3), 32); }
 
 void bodypart::Save(outputfile& SaveFile) const
 {
@@ -1813,7 +1814,7 @@ void leg::ApplyAgilityPenalty(item* Item)
     AgilityBonus -= Item->GetInElasticityPenalty(IsAlive() ? Agility : GetMainMaterial()->GetFlexibility());
 }
 
-uchar corpse::GetFlyAmount() const
+uchar corpse::GetSpoilLevel() const
 {
   uchar FlyAmount = 0;
 
@@ -1821,8 +1822,8 @@ uchar corpse::GetFlyAmount() const
     {
       bodypart* BodyPart = GetDeceased()->GetBodyPart(c);
 
-      if(BodyPart && FlyAmount < BodyPart->GetFlyAmount())
-	FlyAmount = BodyPart->GetFlyAmount();
+      if(BodyPart && FlyAmount < BodyPart->GetSpoilLevel())
+	FlyAmount = BodyPart->GetSpoilLevel();
     }
 
   return FlyAmount;
@@ -2511,3 +2512,4 @@ uchar corpse::GetArticleMode() const
 {
   return Deceased->LeftOversAreUnique() ? DEFINITE_ARTICLE : NORMAL_ARTICLE;
 }
+
