@@ -741,11 +741,11 @@ bool fountain::AddAdjective(std::string& String, bool Articled) const
     return false;
 }
 
-void liquidterrain::VirtualConstructor(bool Load) // gum solution
+/*void liquidterrain::VirtualConstructor(bool Load) // gum solution
 {
   glterrain::VirtualConstructor(Load);
   SetAnimationFrames(16);
-}
+}*/
 
 fountain::~fountain()
 {
